<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image"
                android:layout_width="@dimen/_70dp"
                android:layout_height="@dimen/_70dp"
                android:src="@drawable/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </de.hdodenhof.circleimageview.CircleImageView>

            <ImageView
                android:id="@+id/btn_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/notification"
                android:contentDescription="@string/imageview" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/hello"
                android:textColor="#454545"
                android:textSize="@dimen/_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/circle_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:id="@+id/tv_make"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/text_make"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/text_stay"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_make" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/home"
                    android:textColor="#6E9E08"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/textView2"
                    app:layout_constraintStart_toEndOf="@id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_1">

                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_bar"
                    android:iconifiedByDefault="false"
                    android:queryHint="Search any recipes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/filter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/imageview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_2">

                <ImageView
                    android:id="@+id/image_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/popular"
                    app:layout_constraintBottom_toTopOf="@+id/tv_popular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/imageview" />

                <TextView
                    android:id="@+id/tv_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="@string/popular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="@id/image_popular"
                    app:layout_constraintStart_toStartOf="@id/image_popular"
                    app:layout_constraintTop_toBottomOf="@id/image_popular" />


                <ImageView
                    android:id="@+id/image_western"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30dp"
                    android:src="@drawable/western"
                    app:layout_constraintBottom_toTopOf="@id/tv_popular"
                    app:layout_constraintStart_toEndOf="@id/image_popular"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/imageview" />

                <TextView
                    android:id="@+id/tv_western"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/western"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="@+id/image_western"
                    app:layout_constraintStart_toStartOf="@+id/image_western"
                    app:layout_constraintTop_toBottomOf="@+id/image_western" />

                <ImageView
                    android:id="@+id/image_drinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30dp"
                    android:src="@drawable/drinks"
                    app:layout_constraintBottom_toTopOf="@id/tv_western"
                    app:layout_constraintStart_toEndOf="@id/image_western"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/imageview" />

                <TextView
                    android:id="@+id/tv_drinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drinks"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="@+id/image_drinks"
                    app:layout_constraintStart_toStartOf="@+id/image_drinks"
                    app:layout_constraintTop_toBottomOf="@+id/image_drinks" />

                <ImageView
                    android:id="@+id/image_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30dp"
                    android:src="@drawable/dessert"
                    app:layout_constraintBottom_toTopOf="@id/tv_drinks"
                    app:layout_constraintStart_toEndOf="@id/image_drinks"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/imageview" />

                <TextView
                    android:id="@+id/tv_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="@+id/image_dessert"
                    app:layout_constraintStart_toStartOf="@+id/image_dessert"
                    app:layout_constraintTop_toBottomOf="@+id/image_dessert" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/popular_recipes"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>